# pixi-abs-path-bug

./: .gitignore  pyproject.toml
