[project]
name = "minimal_project"
version = "0.1"
description = "minimal"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pixi.project]
name = "test_project"
channels = ["conda-forge"]
platforms = ["win-64", "linux-64"]

[tool.pixi.pypi-dependencies]
minimal_project = { path = "C:/checkouts/testing-ground/pixi-abs-path-bug", editable = true }
